HACH-11480 #7
